--- a/.github/workflows/pdga_check.yml
+++ b/.github/workflows/pdga_check.yml
@@ -6,6 +6,9 @@ on:
     - cron: '*/5 * * * *'
   workflow_dispatch:
 
+  permissions:
+  contents: write
+
 jobs:
   check-pdga:
     runs-on: ubuntu-latest
